Pridani fotek a ikon, ocislovani

--- a/anastazie.html
+++ b/anastazie.html
@@ -24,12 +24,14 @@
   </a>
   </nav>
   <section class="container sec1" id="sec1">
+    
     <div class="container-text">
         <h1>Your Travel Assistant</h1>
+        
     </div>    
   </section>  
   <section class="container">
-  
+  <img src="./fotky/fotka1.jpg">
   </section>
   
 
