--- a/anastazie.html
+++ b/anastazie.html
@@ -14,10 +14,10 @@
   <nav class="container">
     <div class="topnav">
       <li><a href="#about">About Us</a></li>
-      <li><a href="#about">What We Do</a></li>
-      <li><a href="#about">Our Tips</a></li>
-      <li><a href="#about">Where to go</a></li>
-      <li><a href="#about">Reviews</a></li>
+      <li><a href="whatwedo">What We Do</a></li>
+      <li><a href="#ourtrips">Our Trips</a></li>
+      <li><a href="#wheretogo">Where to go</a></li>
+      <li><a href="#reviews">Reviews</a></li>
         
     </div>
     <a href="xavascript:void(0);" class="icon" onclick="myFunction()">
@@ -40,10 +40,28 @@
       Leigh McAdam is a Calgary-based writer, photographer and social media enthusiast with over 48,000 followers. Her blog: HikeBikeTravel is frequently cited as one of the top travel and outdoor adventure blogs in Canada, and consistently receives over 135,000 monthly page views. She shares her enthusiasm for the outdoors as a brand ambassador for Sporting Life, and has worked on campaigns for Travel Alberta, Expedia and Flight Hub. Leigh is the author of Discover Canada: 100 Inspiring Outdoor Adventures. Currently, she is co-authoring: 125 Nature Hot Spots in Alberta (spring 2018). A true adventurer, Leigh will try anything once, except perhaps bungee jumping.
     </p>
     </div>
-  <img src="./fotky/fotka1.jpg">
+  <img src="./fotky/fotka1.jpg" alt="A couple laying in the grass">
   <div></div>
   </section>
- 
+
+  <section id="whatwedo"></section>
+  <section id="ourtrips">
+    <div class="photo-grid">
+      <img class="grid-item" src="./fotky/fotka2.jpg" alt="">
+      <img class="grid-item" src="./fotky/fotka3.jpg" alt="">
+      <img class="grid-item" src="./fotky/fotka4.jpg" alt="">
+      <img class="grid-item" src="./fotky/fotka5.jpg" alt="">
+      <div class="center-text">Our Trips</div>
+      <img class="grid-item" src="./fotky/fotka6.jpg" alt="">
+      <img class="grid-item" src="./fotky/fotka7.jpg" alt="">
+      <img class="grid-item" src="./fotky/fotka8.jpg" alt="">
+      <img class="grid-item" src="./fotky/fotka9.jpg" alt="">
+    </div>
+
+
+  </section>
+  <section id="wheretogo"></section>
+ <section id="reviews"></section>
 
   </body>
 </html>
