--- a/anastazie.html
+++ b/anastazie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>WA Prace ve dvou</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,13 +14,13 @@
   <nav class="container">
     <div class="topnav">
       <li><a href="#about">About Us</a></li>
-      <li><a href="whatwedo">What We Do</a></li>
+      <li><a href="#whatwedo">What We Do</a></li>
       <li><a href="#ourtrips">Our Trips</a></li>
       <li><a href="#wheretogo">Where to go</a></li>
       <li><a href="#reviews">Reviews</a></li>
         
     </div>
-    <a href="xavascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
   </nav>
@@ -44,7 +44,30 @@
   <div></div>
   </section>
 
-  <section id="whatwedo"></section>
+  <section id="whatwedo" class="whatwedo">
+      <h1>What We Do</h1>
+      <p class="description">
+        Opportunities for challenging hikes and pleasant strolls are scattered all over this planet; you just need to know where to find them. We do. Kilimanjaro, Everest Base Camp, Patagonia, and the Inca Trail are out there, waiting for you to walk all over them. We’re proud of our record of successful ascents (over 92% of our travellers make it to the top of Kili, depending on the route), but it’s our CEOs and local guides that make the journey itself as memorable as the summit. And if you’re not into big climbs, don’t sweat it; we’ve got loads of lower-impact walks and iconic treks you’ll love, too.
+      </p>
+      <div class="activities">
+        <div class="activity">
+          <img src="./Ikony/car-white.png/" alt="Hiking icon" />
+          <p>Hiking</p>
+        </div>
+        <div class="activity">
+          <img src="./Ikony/car-white.png" alt="Cycling icon" />
+          <p>Cycling</p>
+        </div>
+        <div class="activity">
+          <img src="./Ikony/water-white.png" alt="Water icon" />
+          <p>Surfing</p>
+        </div>
+        <div class="activity">
+          <img src="./Ikony/car-white.png" alt="Car icon" />
+          <p>Car trips</p>
+        </div>
+      </div>
+  </section>
   <section id="ourtrips">
     <div class="photo-grid">
       <img class="grid-item" src="./fotky/fotka2.jpg" alt="">
