--- a/anastazie.html
+++ b/anastazie.html
@@ -11,19 +11,19 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <nav class="container">
-    <div class="topnav">
-      <li><a href="#about">About Us</a></li>
-      <li><a href="#whatwedo">What We Do</a></li>
-      <li><a href="#ourtrips">Our Trips</a></li>
-      <li><a href="#wheretogo">Where to go</a></li>
-      <li><a href="#reviews">Reviews</a></li>
-        
-    </div>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </nav>
+      <nav class="container">
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+             <i class="fa fa-bars"></i>
+          </a>
+          <div class="topnav" id="topnav">    
+              <li><a href="#about">About Us</a></li>
+              <li><a href="#whatwedo">What We Do</a></li>
+              <li><a href="#ourtrips">Our Trips</a></li>
+              <li><a href="#wheretogo">Where to go</a></li>
+              <li><a href="#reviews">Reviews</a></li>
+
+          </div>
+      </nav>
   <section class="container sec1" id="sec1">
    
     <div class="container-text">
@@ -51,11 +51,11 @@
       </p>
       <div class="activities">
         <div class="activity">
-          <img src="./Ikony/car-white.png/" alt="Hiking icon" />
+          <img src="./Ikony/hiking-white.png" alt="Hiking icon" />
           <p>Hiking</p>
         </div>
         <div class="activity">
-          <img src="./Ikony/car-white.png" alt="Cycling icon" />
+          <img src="./Ikony/cycle-white.png" alt="Cycling icon" />
           <p>Cycling</p>
         </div>
         <div class="activity">
@@ -74,7 +74,7 @@
       <img class="grid-item" src="./fotky/fotka3.jpg" alt="">
       <img class="grid-item" src="./fotky/fotka4.jpg" alt="">
       <img class="grid-item" src="./fotky/fotka5.jpg" alt="">
-      <div class="center-text">Our Trips</div>
+      <div class="center-text"><h2>Our Trips</h2></div>
       <img class="grid-item" src="./fotky/fotka6.jpg" alt="">
       <img class="grid-item" src="./fotky/fotka7.jpg" alt="">
       <img class="grid-item" src="./fotky/fotka8.jpg" alt="">
@@ -83,8 +83,18 @@
 
 
   </section>
-  <section id="wheretogo"></section>
- <section id="reviews"></section>
+  <section id="wheretogo"><h1>Where do you want to go?</h1></section>
+ <section id="reviews"><h3>Reviews</h3></section>
 
+      <script>
+          function myFunction() {
+              var x = document.getElementById("topnav");
+              if (x.style.display === "flex") {
+                  x.style.display = "none";
+              } else {
+                  x.style.display = "flex";
+              }
+          }
+      </script>
   </body>
 </html>
