I think i messed up a merge conflict or something idk fixed maybe??

--- a/anastazie.html
+++ b/anastazie.html
@@ -83,9 +83,37 @@
 
 
   </section>
-  <section id="wheretogo"><h1>Where do you want to go?</h1></section>
- <section id="reviews"><h3>Reviews</h3></section>
-
+      <section id="wheretogo" class="wheredoyouwanttogo">
+          <div class="title-container">
+              <h1 class="start">Where do you <br>want to go? </h1>
+          </div>
+          <div class="details-container">
+              <p class="start">
+                  You’ll find 21 detailed adventure guides, over a hundred practical travel tips, book reviews on anything outdoors related, packing lists on a range of outdoor activities including kayaking, backpacking and camping as well as honest hotel and B&B reviews.
+              </p>
+              <p class="start">
+                  Contact us and we will help you!
+              </p>
+              <div class="contactus-container">
+                  <button>CONTACT US</button>
+              </div>
+          </div>
+      </section>
+      </section>
+      <section id="reviews" class="reviews">
+          <div class="reviews">
+              <h1 class="reviewstitle">Reviews </h1>
+          </div>
+          <div class="reviewsdetails-container">
+              <p class ="reviewstext">
+                  Our amazing clients are the reason we exist, and their reactions to our customized travel experiences and personalized service keep us smiling all day long. Here is just a sampling of what they’ve said:
+              </p>
+          </div>
+          <div class="reviewsimg">
+              <img class="reviewsimg1" src="./fotky/fotka10.jpg" alt="">
+              <img class="reviewsimg2" src="./fotky/fotka11.jpg" alt="">
+          </div>
+      </section>
       <script>
           function myFunction() {
               var x = document.getElementById("topnav");
