Reviews section finished

--- a/anastazie.html
+++ b/anastazie.html
@@ -100,24 +100,35 @@
     </div>
   </section>
 
- </section>
+ 
   <section id="reviews" class="reviews">
-   <div class="reviews">
-    <h1 class="reviewstitle">Reviews </h1>
-</div>
-<div class="reviewsdetails-container">
-  <p class ="reviewstext">
-   Our amazing clients are the reason we exist, and their reactions to our customized travel experiences and personalized service keep us smiling all day long. Here is just a sampling of what they’ve said:
-  </p>
-</div>
-   <div class="reviewsimg">
-      <img class="reviewsimg1" src="./fotky/fotka10.jpg" alt="">
-   <img class="reviewsimg2" src="./fotky/fotka11.jpg" alt="">
+
+    <div class="reviewfirst-container">
+      <h1>Reviews </h1>
+      <p>
+        Our amazing clients are the reason we exist, and their reactions to our customized travel experiences and personalized service keep us smiling all day long. Here is just a sampling of what they’ve said:
+      </p>
     </div>
-    
 
+    <div class="reviewsecond-container">
 
+      <div class="clientreview-first">
+        <h1>Bertie Norton </h1>
+        <p>
+          She has booked two major European trips for us in the past year and every aspect has met, and in most cases exceeded, our expectations. Best prices, best hotels, best itineraries, and best cruises, she does it all. But the most important thing is she remembers the little things that we would do if we were making the plans ourselves. 
+        </p>
+        <img src="./fotky/fotka10.jpg" alt="Avatar">
+      </div>
+      <div class="clientreview-second">
+        <h1>Frank Kinney</h1>
+        <p>
+          Leigh McAdam has been making my travel arrangements for about 20 years and there is no one else I would trust to arrange my trips and tours. I've also had great  fun on a few of the group trips she has arranged - Peru & Machu Picchu and a 10-day cruise out of Venice and diving. It's always an eclectic group of well traveled, interesting people. 
+        </p>
+        <img src="./fotky/fotka11.jpg" alt="">
+      </div>
+    </div>
   </section>
+
 
 
   </body>
