Finished PC version

--- a/anastazie.html
+++ b/anastazie.html
@@ -95,7 +95,7 @@
         Contact us and we will help you!
       </p>
       <div class="contactus-container">
-        <button>CONTACT US</button>
+          <a href="#contact"><button>CONTACT US</button></a>
       </div>
     </div>
   </section>
@@ -128,8 +128,16 @@
       </div>
     </div>
   </section>
+  <div class="photos-container">
+      <img class="grid-item2" src="./fotky/fotka12.jpg" alt="">
+      <img class="grid-item2" src="./fotky/fotka13.jpg" alt="">
+      <img class="grid-item2" src="./fotky/fotka14.jpg" alt="">
+      <img class="grid-item2" src="./fotky/fotka15.jpg" alt="">
+  </div>
 
-
-
+  <div class="contact" id="contact">
+    <h3>Contact</h3>
+      <p>&copy; 2022 - Your Travel Assistant. All Rights Reserved</p>
+  </div>
   </body>
 </html>
