Hamburger Menu fix

--- a/anastazie.html
+++ b/anastazie.html
@@ -140,4 +140,14 @@
       <p>&copy; 2022 - Your Travel Assistant. All Rights Reserved</p>
   </div>
   </body>
+<script>
+  function myFunction() {
+    var x = document.getElementById("topnav");
+    if (x.style.display === "flex") {
+      x.style.display = "none";
+    } else {
+      x.style.display = "flex";
+    }
+  }
+</script>
 </html>
