Tablet version done

--- a/anastazie.html
+++ b/anastazie.html
@@ -85,7 +85,7 @@
   </section>
   <section id="wheretogo" class="wheredoyouwanttogo">
     <div class="title-container">
-        <h1 class="start">Where do you <br>want to go? </h1>
+        <h1 class="start">Where do you <br/>want to go? </h1>
     </div>
     <div class="details-container">
       <p class="start">
