--- a/anastazie.html
+++ b/anastazie.html
@@ -27,8 +27,7 @@
   <section class="container sec1" id="sec1">
    
     <div class="container-text">
-        <h1>Your Travel Assistant</h1>
-       
+        <h1>Your<br> Travel<br> Assistant</h1>
     </div>    
   </section>  
 
@@ -143,6 +142,7 @@
 <script>
   function myFunction() {
     var x = document.getElementById("topnav");
+    console.log(x);
     if (x.style.display === "flex") {
       x.style.display = "none";
     } else {
